--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ permalink: /404.html
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Halaman tidak ditemukan :(</strong></p>
+  <p>Maaf, halaman yang anda minta tidak ditemukan.</p>
 </div>
